<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StudentActivity">

    <Button
        android:id="@+id/btnView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="93dp"
        android:layout_marginEnd="9dp"
        android:layout_marginBottom="101dp"
        android:text="@string/labelView"
        app:layout_constraintBottom_toTopOf="@+id/btnUpdateGo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtStudentName"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginStart="46dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="28dp"
        android:ems="10"
        android:hint="@string/hintName"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/txtMobile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtStudentId"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginStart="46dp"
        android:layout_marginTop="209dp"
        android:layout_marginEnd="27dp"
        android:ems="10"
        android:hint="@string/hintStudentId"
        android:inputType="number"
        app:layout_constraintEnd_toStartOf="@+id/btnUpdateGo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtMobile"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginStart="46dp"
        android:layout_marginTop="27dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="29dp"
        android:ems="10"
        android:hint="@string/hintMobile"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/txtStudentId"
        app:layout_constraintEnd_toStartOf="@+id/btnDeleteGo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btnView" />

    <Button
        android:id="@+id/btnAddData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:text="@string/labelAdd"
        app:layout_constraintBottom_toTopOf="@+id/btnView"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/txtCourseId"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:hint="@string/hintCourseId"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="@+id/txtStudentId"
        app:layout_constraintTop_toBottomOf="@+id/txtStudentId" />

    <TextView
        android:id="@+id/txtOutput"
        android:layout_width="310dp"
        android:layout_height="267dp"
        android:layout_marginBottom="55dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnDeleteGo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="501dp"
        android:text="@string/labelDeleteGo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txtMobile"
        app:layout_constraintTop_toBottomOf="@+id/btnView" />

    <Button
        android:id="@+id/btnUpdateGo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="9dp"
        android:layout_marginBottom="410dp"
        android:text="@string/label"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txtStudentId"
        app:layout_constraintTop_toBottomOf="@+id/btnView" />
</androidx.constraintlayout.widget.ConstraintLayout>